# breathing-belt-python

./: .gitignore  README.md  config.example.toml  config.toml  pyproject.toml  requirements.txt
src/: __init__.py  calibration.py  connect.py  lslOut.py  lsl_metadata.py  lsl_out.py  main.py  pipeline.py  plot.py  preprocessing.py  quality.py  session_writer.py  settings.py
tests/: test_adaptive_range.py  test_breathbelt_reader.py  test_calibration.py  test_entrypoint.py  test_lsl_metadata.py  test_lsl_out.py  test_pipeline.py  test_plot.py  test_preprocessing.py  test_session_writer.py  test_settings.py
